--- a/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_overrides.scss
+++ b/edx-platform/nau-basic/lms/static/sass/partials/lms/theme/_overrides.scss
@@ -88,10 +88,11 @@ body {
     display: none;
 }
 
+/*
 .content-wrapper .course-tabs.navbar,
 .content-wrapper .wrapper-course-material .course-material {
     overflow: hidden;
-}
+}*/
 
 .content-wrapper .course-tabs .navbar-nav {
     flex-wrap: wrap;
@@ -699,6 +700,7 @@ li:hover ul.sub-nav.access-menu {
     display: grid;    
 }
 
+/*
 @media screen and (max-width: 850px) {
     
     div#branding-top-nav a#open-menu-arrow {
@@ -739,10 +741,9 @@ li:hover ul.sub-nav.access-menu {
       padding: 10px;
       background-color: white;
       display: block;
-      z-index: 2; /* show closing menu arrow when in tablet and mobile versions */	  
+      z-index: 2;
     }
-    
-    /* Close menu button */
+
     div #menu-container a#close-menu-arrow {
       display: block;
       font-size: 20px;
@@ -750,7 +751,7 @@ li:hover ul.sub-nav.access-menu {
       left: 45px;
       top: 10px;
       padding: 10px;      
-      z-index: 5; /* show closing menu arrow when in tablet and mobile versions */	  
+      z-index: 5;
     }
   div#actions_container {
     display: block;
@@ -762,6 +763,7 @@ li:hover ul.sub-nav.access-menu {
   }
     
 }
+*/
 
 .dashboard .main-container .my-courses {
     
